# StructuralFramework-

./: CMakeLists.txt  CMakeSettings.json
Core/: CMakeLists.txt  Collections.cpp  Collections.hpp  Core.cpp  Core.h  Core.hpp  ISerializable.hpp  Interfaces.hpp  Parsers.cpp  Parsers.hpp  Streams.cpp  Streams.hpp  Syncronized.hpp
NetSupport/: CMakeLists.txt  NetSupport.cpp  NetSupport.h
Streams/: BufferedReader.cpp  CMakeLists.txt  FileReader.cpp  FileSystem.cpp  FileSystem.hpp  Streams.hpp  test.cpp
Tester/: CMakeLists.txt  Tester.cpp  Tester.h
